--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "keywords": [
     "GitHub",
     "Actions"
-  ]
+  ],
+  "dependencies": {
+    "@actions/core": "^1.9.1",
+    "@actions/github": "^5.0.0"
+  }
 }
