--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,8 @@ dist
 .yarn/install-state.gz
 .pnp.*
 package-lock.json
+src/.DS_Store
+.idea/modules.xml
+.idea/revel-webapp-deployment.iml
+.idea/vcs.xml
+.DS_Store
