--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   ],
   "dependencies": {
     "@actions/core": "^1.9.1",
-    "@actions/github": "^5.0.0"
+    "@actions/github": "^5.0.0",
+    "archiver": "^7.0.1",
+    "axios": "^1.7.4",
+    "form-data": "^4.0.0"
   }
 }
