--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Avery Knight",
@@ -18,7 +19,9 @@
     "@actions/github": "^5.0.0",
     "archiver": "^7.0.1",
     "axios": "^1.7.4",
-    "form-data": "^4.0.0"
+    "debug": "^4.3.6",
+    "form-data": "^4.0.0",
+    "ts-loader": "^9.5.1"
   },
   "devDependencies": {
     "webpack": "^5.94.0",
