--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,15 +1,12 @@
 {
-  "compilerOptions": {
-    "resolveJsonModule": true,
-    "outDir": "./",
-    "baseUrl": "tsconfig",
-    "types": [],
-    "experimentalDecorators": true
-  },
-  "files": [
-    "./index.ts"
-  ],
-  "include": ["**.ts"],
-  "exclude": ["**/*.spec.ts"]
+	"compilerOptions": {
+		"resolveJsonModule": true,
+		"outDir": "./",
+		"baseUrl": "tsconfig",
+		"types": [],
+		"experimentalDecorators": true
+	},
+	"files": ["./index.ts"],
+	"include": ["**.ts"],
+	"exclude": ["**/*.spec.ts"]
 }
-
